k8s/base/core/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployment-platform
  labels:
    app.kubernetes.io/part-of: deployment-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
